@@ -1,0 +1,61 @@
+ELF Header:
+  Magic:   7f 45 4c 46 01 01 01 61 00 00 00 00 00 00 00 00 
+  Class:                             ELF32
+  Data:                              2's complement, little endian
+  Version:                           1 (current)
+  OS/ABI:                            ARM
+  ABI Version:                       0
+  Type:                              REL (Relocatable file)
+  Machine:                           ARM
+  Version:                           0x1
+  Entry point address:               0
+  Start of program headers:          0 (bytes into file)
+  Start of section headers:          364 (bytes into file)
+  Flags:                             0, GNU EABI
+  Size of this header:               52 (bytes)
+  Size of program headers:           0 (bytes)
+  Number of program headers:         0
+  Size of section headers:           40 (bytes)
+  Number of section headers:         8
+  Section header string table index: 7
+
+There are no program headers in this file.
+There are 8 section headers, starting at offset 0x16c:
+
+Section Headers:
+  [Nr] Name              Type            Addr     Off    Size   ES Flg Lk Inf Al
+  [ 0] (null)            NULL            00000000 000000 000000 00      0   0  0
+  [ 1] .symtab           SYMTAB          00000000 000034 000080 10      2   8  4
+  [ 2] .strtab           STRTAB          00000000 0000b4 000007 00      0   0  1
+  [ 3] Code1             PROGBITS        00000000 0000bc 000010 00  AX  0   0  4
+  [ 4] Code2             PROGBITS        00000000 0000cc 000028 00  AX  0   0  4
+  [ 5] .rel.Code2        REL             00000000 0000f4 000030 08      1   4  4
+  [ 6] Code3             PROGBITS        00000000 000124 000010 00  AX  0   0  4
+  [ 7] .shstrtab         STRTAB          00000000 000134 000038 00      0   0  1
+Key to Flags:
+  W (write), A (alloc), X (execute), M (merge), S (strings)
+  I (info), L (link order), G (group), x (unknown)
+  O (extra OS processing required) o (OS specific), p (processor specific)
+
+There is no dynamic section in this file.
+
+Relocation section (.rel.Code2):
+r_offset r_info   r_type              st_value st_name
+00000024 700000002 R_ARM_ABS32         00000000 Code3
+00000020 700000002 R_ARM_ABS32         00000000 Code3
+0000001c 600000002 R_ARM_ABS32         00000000 Code2
+00000018 600000002 R_ARM_ABS32         00000000 Code2
+00000014 500000002 R_ARM_ABS32         00000000 Code1
+00000010 500000002 R_ARM_ABS32         00000000 Code1
+Symbol table (.symtab) contains 8 entries:
+   Num:    Value          Size Type    Bind   Vis      Ndx Name
+     0: 0000000000000000     0 NOTYPE  LOCAL  DEFAULT  UND 
+     1: 0000000000000000     0 NOTYPE  LOCAL  DEFAULT    3 $a
+     2: 0000000000000000     0 NOTYPE  LOCAL  DEFAULT    4 $a
+     3: 0000000000000000     0 NOTYPE  LOCAL  DEFAULT    6 $a
+     4: 0000000000000010     0 NOTYPE  LOCAL  DEFAULT    4 $d
+     5: 0000000000000000     0 SECTION LOCAL  DEFAULT    3 
+     6: 0000000000000000     0 SECTION LOCAL  DEFAULT    4 
+     7: 0000000000000000     0 SECTION LOCAL  DEFAULT    6 
+
+elf checksum: 0x176a
